--- a/bookers1-debug/app/views/books/_form.html.erb
+++ b/bookers1-debug/app/views/books/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+  <% if flash[:notice] %>
+    <p><%= flash[:notice] %></p>
+  <% end %>
+
+
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
